<resources>
    <string name="app_name">O-Shop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="item_image">Item image</string>
    <string name="item_subtract">Subtract item</string>
    <string name="order">Order</string>
    <string name="none">None</string>
    <string name="subtract">Subtract</string>
    <string name="cost_label">Cost</string>
    <string name="image_description">Image</string>
    <string name="add_description">Add</string>
    <string name="tag_1">Tag 1</string>
    <string name="tag_2">Tag 2</string>
    <string name="tag_3">Tag_3</string>
    <string name="all_items">All items</string>
    <string name="clothes">Clothes</string>
    <string name="accessories">Accessories</string>
    <string name="shoes">Shoes</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="hat">Hat</string>
    <string name="hats">Hats</string>
    <string name="measurement">pcs.</string>
</resources>
