<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="App">
        <menu>
            <item
                android:id="@+id/nav_main"
                android:icon="@drawable/home"
                android:title="@string/home" />
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/search"
                android:title="@string/search" />
        </menu>
    </item>
    <item android:title="Article">
    <menu
        >
        <item
            android:id="@+id/all_items"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/all_items" />
        <item
            android:id="@+id/nav_hats"
            android:icon="@drawable/hat"
            android:title="@string/hats" />
        <item
            android:id="@+id/nav_accessories"
            android:icon="@drawable/accessories"
            android:title="@string/accessories" />
        <item
            android:id="@+id/nav_clothes"
            android:icon="@drawable/clothes"
            android:title="@string/clothes" />
        <item
            android:id="@+id/nav_shoes"
            android:icon="@drawable/shoes"
            android:title="@string/shoes" />
    </menu>
    </item>
    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/nav_basket"
                android:icon="@drawable/basket"
                android:title="@string/basket" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile"
                android:title="@string/profile" />
        </menu>
    </item>

</menu>
