<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.littledev.duplom.ItemInfo"
    tools:showIn="@layout/item_info_bar">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusableInTouchMode="true"
        >
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:background="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/image_description" />
        <TextView
            android:id="@+id/item_label"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/item_image"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:textSize="10pt"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/item_cost_label"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/item_label"
            android:layout_toEndOf="@id/item_image"
            android:textAlignment="center"
            android:text="@string/cost_label"
            android:textSize="8pt"/>
        <TextView
            android:id="@+id/item_cost"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/item_label"
            android:textAlignment="center"
            android:layout_toEndOf="@id/item_cost_label"
            android:textSize="8pt"/>
        <TextView
            android:id="@+id/item_currency"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/item_label"
            android:textAlignment="center"
            android:layout_toEndOf="@id/item_cost"
            android:textSize="8pt"/>

        <ImageButton
            android:id="@+id/item_subtract"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/item_cost_label"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/item_image"
            android:scaleType="fitXY"
            android:src="@drawable/minus"
            android:background="@color/colorWhite"
            android:contentDescription="@string/subtract" />
        <EditText
            android:id="@+id/item_amount"
            android:layout_marginStart="10dp"
            android:layout_below="@id/item_cost_label"
            android:layout_toEndOf="@id/item_subtract"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="12pt"
            android:hint="@string/none"
            />

        <ImageButton
            android:id="@+id/item_add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/item_cost_label"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/item_amount"
            android:background="@color/colorWhite"
            android:scaleType="fitXY"
            android:src="@drawable/plus"
            android:contentDescription="@string/add_description" />
        <Button
            android:id="@+id/item_order"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_below="@id/item_amount"
            android:text="@string/order"
            android:textSize="15pt"/>
        <TextView
            android:id="@+id/tag_1_name"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/item_order"
            android:text="@string/tag_1"
            android:textAlignment="center"
            android:textSize="7pt"/>
        <TextView
            android:id="@+id/tag_2_name"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/tag_1_name"
            android:text="@string/tag_2"
            android:textAlignment="center"
            android:textSize="7pt"/>
        <TextView
            android:id="@+id/tag_3_name"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/tag_2_name"
            android:text="@string/tag_3"
            android:textAlignment="center"
            android:textSize="7pt"/>
        <TextView
            android:id="@+id/tag_1"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tag_1_name"
            android:layout_marginStart="10dp"
            android:layout_below="@id/item_order"
            android:textSize="7pt"/>
        <TextView
            android:id="@+id/tag_2"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tag_2_name"
            android:layout_marginStart="10dp"
            android:layout_below="@id/tag_1_name"
            android:textSize="7pt"/>
        <TextView
            android:id="@+id/tag_3"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tag_3_name"
            android:layout_marginStart="10dp"
            android:layout_below="@id/tag_2_name"
            android:textSize="7pt"/>
        <TextView
            android:id="@+id/description"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tag_3"/>
    </RelativeLayout>
</ScrollView>